# CPUPathTracer

./: .gitignore  .gitmodules  CMakeLists.txt  ExternalDependencies.cmake
include/: ImageSampler.hpp  PathTracer.hpp  RayIntersector.h  RayIntersector.hpp  Renderer.hpp
include/glad/: glad.h
resources/: cornell_box.gltf
src/: ImageSampler.cpp  Main.cpp  PathTracer.cpp  RayIntersector.cpp  Renderer.cpp  glad.c
